{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 642,
  "lineage": "5c6a4d34-7d19-f59f-d766-ee24b59d4f81",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "myapp-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:691014198162:loadbalancer/myapp-elb",
            "availability_zones": [
              "cn-northwest-1a",
              "cn-northwest-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "myapp-elb-1010086734.cn-northwest-1.elb.amazonaws.com.cn",
            "health_check": [
              {
                "healthy_threshold": 3,
                "interval": 60,
                "target": "HTTP:3000/",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "myapp-elb",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 3000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "myapp-elb",
            "security_groups": [
              "sg-0783c306cccda69b7"
            ],
            "source_security_group": "691014198162/myapp-elb",
            "source_security_group_id": "sg-0783c306cccda69b7",
            "subnets": [
              "subnet-02617e5ef8eb7d00c",
              "subnet-0fb24d6bf53c6f101"
            ],
            "tags": {
              "Name": "myapp-elb"
            },
            "zone_id": "ZM7IZAIOVVDZF"
          },
          "dependencies": [
            "aws_security_group.myapp-elb-securitygroup",
            "aws_subnet.main-public-1",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04effa29f4d91541f",
            "arn": "arn:aws-cn:ec2:cn-northwest-1:691014198162:instance/i-020bb4d03b753585c",
            "associate_public_ip_address": true,
            "availability_zone": "cn-northwest-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020bb4d03b753585c",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0694aef82625e3bee",
            "private_dns": "ip-10-0-1-21.cn-northwest-1.compute.internal",
            "private_ip": "10.0.1.21",
            "public_dns": "ec2-161-189-161-168.cn-northwest-1.compute.amazonaws.com.cn",
            "public_ip": "161.189.161.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06b6d26f127444c00",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb24d6bf53c6f101",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d55e102b0f11ffb7"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.jenkins-securitygroup",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:691014198162:internet-gateway/igw-04608e1d51c4e6367",
            "id": "igw-04608e1d51c4e6367",
            "owner_id": "691014198162",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-09b4171218215832f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01a08f3958a02c5e4",
            "owner_id": "691014198162",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04608e1d51c4e6367",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-09b4171218215832f"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00375ddbd88a94b8e",
            "route_table_id": "rtb-01a08f3958a02c5e4",
            "subnet_id": "subnet-0fb24d6bf53c6f101"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0361604db36a9fa4d",
            "route_table_id": "rtb-01a08f3958a02c5e4",
            "subnet_id": "subnet-02617e5ef8eb7d00c"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d34fab0e8b35d4b",
            "route_table_id": "rtb-01a08f3958a02c5e4",
            "subnet_id": "subnet-014257b383fcea8e6"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:691014198162:security-group/sg-0afa511b7862b7f96",
            "description": "security group for ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afa511b7862b7f96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0783c306cccda69b7"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs",
            "name_prefix": null,
            "owner_id": "691014198162",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b4171218215832f"
          },
          "dependencies": [
            "aws_security_group.myapp-elb-securitygroup",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:691014198162:security-group/sg-0d55e102b0f11ffb7",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d55e102b0f11ffb7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-securitygroup",
            "name_prefix": null,
            "owner_id": "691014198162",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b4171218215832f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myapp-elb-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:691014198162:security-group/sg-0783c306cccda69b7",
            "description": "security group for ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0783c306cccda69b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myapp-elb",
            "name_prefix": null,
            "owner_id": "691014198162",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b4171218215832f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:691014198162:subnet/subnet-0e20adc6548b355cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1a",
            "availability_zone_id": "cnnw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0e20adc6548b355cb",
            "map_public_ip_on_launch": false,
            "owner_id": "691014198162",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-09b4171218215832f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:691014198162:subnet/subnet-0a5878b9c4b3dde67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1b",
            "availability_zone_id": "cnnw1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0a5878b9c4b3dde67",
            "map_public_ip_on_launch": false,
            "owner_id": "691014198162",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-09b4171218215832f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:691014198162:subnet/subnet-0b19b5aa898adff53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1c",
            "availability_zone_id": "cnnw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0b19b5aa898adff53",
            "map_public_ip_on_launch": false,
            "owner_id": "691014198162",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-09b4171218215832f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:691014198162:subnet/subnet-0fb24d6bf53c6f101",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1a",
            "availability_zone_id": "cnnw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0fb24d6bf53c6f101",
            "map_public_ip_on_launch": true,
            "owner_id": "691014198162",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-09b4171218215832f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:691014198162:subnet/subnet-02617e5ef8eb7d00c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1b",
            "availability_zone_id": "cnnw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02617e5ef8eb7d00c",
            "map_public_ip_on_launch": true,
            "owner_id": "691014198162",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-09b4171218215832f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:691014198162:subnet/subnet-014257b383fcea8e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1c",
            "availability_zone_id": "cnnw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-014257b383fcea8e6",
            "map_public_ip_on_launch": true,
            "owner_id": "691014198162",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-09b4171218215832f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:691014198162:vpc/vpc-09b4171218215832f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0815e8fa445303d6a",
            "default_route_table_id": "rtb-063c2675aaa056d18",
            "default_security_group_id": "sg-057bb020f8f79f654",
            "dhcp_options_id": "dopt-1bc34a72",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09b4171218215832f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-063c2675aaa056d18",
            "owner_id": "691014198162",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}